[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/guns/17.png" type="Texture" id=1]
[ext_resource path="res://weapons/normal_gun.gd" type="Script" id=2]

[node name="NormalGun" type="Node2D"]
script = ExtResource( 2 )

[node name="Texture" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="ShootCooldownTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="SpawnPosition" type="Position2D" parent="."]
position = Vector2( 12, 0 )

[connection signal="timeout" from="ShootCooldownTimer" to="." method="_on_ShootCooldownTimer_timeout"]
